fix(music): hide music overflow scrollbar

--- a/apps/web/components/examples/music/music-view/index.module.css
+++ b/apps/web/components/examples/music/music-view/index.module.css
@@ -1,3 +1,7 @@
+.container {
+  overflow: hidden;
+}
+
 .topPick,
 .madeForYou {
   display: flex;
